# DTEngine

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  Todo.txt  main.cpp
Engine/: CMakeLists.txt
Engine/assets/shaders/: defaultSprite.frag  defaultSprite.vert
Engine/include/: Engine.hpp
Engine/include/DTEngine/: AnimationClip.hpp  Animator.hpp  BoxCollider.hpp  Component.hpp  Engine.hpp  Entity.hpp  EntityHandle.hpp  GameObject.hpp  InputManager.hpp  PhysicsManager.hpp  RenderingManager.hpp  Rigidbody.hpp  Shader.hpp  Sprite.hpp  SpriteRenderer.hpp  TimeManager.hpp  Utils.hpp  Window.hpp  World.hpp  WorldManager.hpp
Engine/include/Engine/: Component.hpp  Entity.hpp  EntityHandle.hpp  GameObject.hpp  PathManager.hpp  RenderingManager.hpp  Shader.hpp  Sprite.hpp  SpriteRenderer.hpp  TimeManager.hpp  Utils.hpp  Window.hpp  World.hpp  WorldManager.hpp
Engine/resources/shaders/: defaultSprite.frag  framebuffer.frag  picking.frag  solidPass.frag
Engine/src/core/: Component.cpp  Engine.cpp  GameObject.cpp  InputManager.cpp  InternalWorksManager.cpp  InternalWorksManager.hpp  PathManager.cpp  PathSystem.cpp  PathSystem.hpp  SystemRegistry.cpp  SystemRegistry.hpp  TimeManager.cpp  TimeSystem.cpp  TimeSystem.hpp  Utils.cpp  World.cpp  WorldManager.cpp  WorldSystem.cpp  WorldSystem.hpp
Engine/src/physics/: BoxCollider.cpp  PhysicsManager.cpp  Rigidbody.cpp
Engine/src/rendering/: AnimationClip.cpp  Animator.cpp  Rendering.cpp  Rendering.hpp  RenderingManager.cpp  RenderingSystem.cpp  RenderingSystem.hpp  Shader.cpp  Sprite.cpp  SpriteRenderer.cpp  Window.cpp
Engine/src/system/: InputSystem.cpp  InputSystem.hpp  InternalSystem.hpp  PathSystem.cpp  PathSystem.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  RenderingSystem.cpp  RenderingSystem.hpp  SystemRegistry.cpp  SystemRegistry.hpp  TimeSystem.cpp  TimeSystem.hpp  WorldSystem.cpp  WorldSystem.hpp
Engine/src/utils/: InputUtils.hpp
Game/: Game.cpp  Game.hpp  SuperComponent.cpp  SuperComponent.hpp
